fixed layout issue with page content

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,11 +1,11 @@
 @import './theme.scss';
 
-.content {
+#root > div > .content {
     padding-top: 3rem;
 }
 
-.heroEnabled {
-    .content {
+#root > .heroEnabled {
+    > .content {
         padding-top: 256px;
         transition: padding $transition-timing;
     }
